k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-backend
spec:
  selector:
    app: auth-api-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api-backend
  template:
    metadata:
      labels:
        app: auth-api-backend
    spec:
      containers:
        - name: auth-api-backend
          image: ghcr.io/${REPO_OWNER}/${REPO_NAME}-backend:latest
          ports:
            - containerPort: 3000
