k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-frontend
spec:
  selector:
    app: auth-api-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api-frontend
  template:
    metadata:
      labels:
        app: auth-api-frontend
    spec:
      containers:
        - name: auth-api-frontend
          image: ghcr.io/micheal-ndoh/auth_api-frontend:latest
          ports:
            - containerPort: 80
