k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auth-api-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-api-frontend
                port:
                  number: 80
